--- a/forms/form.html
+++ b/forms/form.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="step">
                     <p>
-                        Birth
+                        Message
                     </p>
                     <div class="bullet">
                         <span>3</span>
@@ -105,13 +105,17 @@
                             <div class="label">
                                 First name*
                             </div>
-                            <input type="text" name="name" placeholder="first name" required>
+                            <input type="text" name="name" placeholder="name & surname" required>
                         </div>
                         <div class="field">
                             <div class="label">
-                                Last Name
+                                Gender
                             </div>
-                            <input type="text" name="last-name" placeholder="last name">
+                            <select>
+                                <option>Male</option>
+                                <option>Female</option>
+                                <option>Other</option>
+                            </select>
                         </div>
                         <div class="field">
                             <button class="firstNext next">Next</button>
@@ -125,40 +129,32 @@
                             <div class="label">
                                 Email Address
                             </div>
-                            <input type="email" name="email" required>
+                            <input type="email" name="email" required placeholder="eg. youremail@gmail.com">
                         </div>
                         <div class="field">
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="tel" name="phone-number">
+                            <input type="tel" name="phone-number" placeholder="phone number (optional)">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
                             <button class="next-1 next">Next</button>
                         </div>
                     </div>
-                    <div class="page">
+                    <div class="page" id="message-page">
                         <div class="title">
-                            Date of Birth:
+                            Messsage
                         </div>
                         <div class="field">
                             <div class="label">
-                                Date
+                                message
                             </div>
-                            <input type="text">
+                            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="request CV">
+                               
+                            </textarea>
                         </div>
-                        <div class="field">
-                            <div class="label">
-                                Gender
-                            </div>
-                            <select>
-                                <option>Male</option>
-                                <option>Female</option>
-                                <option>Other</option>
-                            </select>
-                        </div>
-                        <div class="field btns">
+                        <div id="messaag-btns" class="field btns">
                             <button class="prev-2 prev">Previous</button>
                             <button class="next-2 next">Next</button>
                         </div>
