--- a/forms/form.html
+++ b/forms/form.html
@@ -142,6 +142,27 @@
                             <button class="next-1 next">Next</button>
                         </div>
                     </div>
+                    <div class="page" >
+                        <div class="title">
+                            Contact Info:
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Email Address
+                            </div>
+                            <input type="email" name="email" required placeholder="eg. youremail@gmail.com">
+                        </div>
+                        <div class="field">
+                            <div class="label">
+                                Phone Number
+                            </div>
+                            <input type="tel" name="phone-number" placeholder="phone number (optional)">
+                        </div>
+                        <div class="field btns">
+                            <button class="prev-2 prev">Previous</button>
+                            <button class="next-2 next">Next</button>
+                        </div>
+                    </div>
                     <div class="page" id="message-page">
                         <div class="title">
                             Messsage
@@ -154,27 +175,6 @@
                                
                             </textarea>
                         </div>
-                        <div id="messaag-btns" class="field btns">
-                            <button class="prev-2 prev">Previous</button>
-                            <button class="next-2 next">Next</button>
-                        </div>
-                    </div>
-                    <div class="page">
-                        <div class="title">
-                            Login Details:
-                        </div>
-                        <div class="field">
-                            <div class="label">
-                                Username
-                            </div>
-                            <input type="text">
-                        </div>
-                        <div class="field">
-                            <div class="label">
-                                Password
-                            </div>
-                            <input type="password">
-                        </div>
                         <div class="field btns">
                             <button class="prev-3 prev">Previous</button>
                             <button type="submit" class="submit">Submit</button>
@@ -183,6 +183,7 @@
 
                     <!-- form options -->
                     <input type="hidden" name="_subject" value="New submission!">
+                    <input type="hidden" name="_autoresponse" value="your form has been recieved.">
                     <input type="hidden" name="_next" value="https://shakexsempe.github.io/Portfolio-Webpage/">
                 </form>
             </div>
