--- a/forms/form.html
+++ b/forms/form.html
@@ -135,7 +135,7 @@
                             <div class="label">
                                 Phone Number
                             </div>
-                            <input type="tel" name="phone-number" placeholder="phone number (optional)">
+                            <input type="tel" name="phone-number" placeholder="phone number">
                         </div>
                         <div class="field btns">
                             <button class="prev-1 prev">Previous</button>
@@ -144,20 +144,17 @@
                     </div>
                     <div class="page" >
                         <div class="title">
-                            Services
+                            <h3>Services</h3>
+                            <p>*currently available for employment</p>
                         </div>
                         <div class="field">
-                            <div class="label">
-                                Freelance
+                            <select>
+                                <option selected="selected" disabled="disabled">Service</option>
+                                <option>One Page Website</option>
+                                <option>Responsive Webpage</option>
+                                <option>Other</option>
+                            </select>
                             </div>
-                            <input type="text" name="freelance" placeholder="website proposal">
-                        </div>
-                        <div class="field">
-                            <div class="label">
-                                recruitment
-                            </div>
-                            <input type="text" name="recruitment" placeholder="agency/establishment..">
-                        </div>
                         <div class="field btns">
                             <button class="prev-2 prev">Previous</button>
                             <button class="next-2 next">Next</button>
